fixed css wasnt working on github pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A small portfolio page for Gurvir Singh built for a course assignment.">
     <meta name="author" content="Gurvir Singh">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="Main.css">
     <script src="Main.js" defer></script>
     <title>Portfolio Webpage for Gurvir Singh</title>
     <style>
