--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <textarea id="subject" name="subject" placeholder="Write something.."
                         style="height:200px;"></textarea>
 
-                    <input id="submitButton" type="submit" value="Submit">
+                    <button id="submitButton">Submit</button>
                 </fieldset>
             </form>
         </div>
